# urule

./: .editorconfig  .eslintignore  README.md  package.json  pnpm-lock.yaml  quasar.config.js
src-tauri/: Cargo.toml  Urule.exe.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  process.rs  region.rs  scan.rs
src-tauri/src/scan/: mod.rs  scan_meta.rs  scannable.rs
src/composables/: useFormatter.ts  useRules.ts  useUruleCore.ts
src/css/: app.scss  quasar.variables.scss
src/layouts/: MainLayout.vue
src/models/: core.ts  index.ts  scan.ts
src/pages/: IndexPage.vue  ProcessList.vue  SplashScreen.vue
src/router/: index.ts  routes.ts
src/stores/: main.ts
