[package]
name = "app"
version = "1.0.0"
description = "You rule, simplified version of cheat engine"
authors = ["Mohsen Pakzad <mohsen137853@gmail.com>"]
license = "MIT & APACHE"
repository = "https://github.com/mohsenpakzad/urule"
default-run = "app"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }

winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi", "handleapi", "memoryapi"] }
paste = "1.0.9"
log = "0.4"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
branch = "dev"
features = ["colored"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
